--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,8 @@ blogger_url: # your blogger URL
 bluesky_url: # your bluesky URL
 dblp_url: # your DBLP profile url
 discord_id: # your discord id (18-digit unique numerical identifier)
-facebook_id: 100087129222128 # your facebook id
+facebook_id:
+# facebook_id: 100087129222128 # your facebook id
 flickr_id: # your flickr id
 github_username: takeshiho0531 # your GitHub user name
 gitlab_username: # your GitLab user name
